--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "npm run build && npm run start-server",
     "watch": "npm run dev",
     "server:production": "npm run build:production && NODE_ENV=production forever start --uid 'tesco-todo' -a server/index.js",
-    "dev": "webpack-dev-server --progress --config './webpack.config.dev-server.js'",
+    "dev": "rm -rf dist && forever stopall && webpack-dev-server --progress --config './webpack.config.dev-server.js'",
     "start-server": "nodemon server/index.js",
     "build": "npm run clean && webpack",
     "build:production": "npm run clean && webpack -p",
@@ -28,7 +28,6 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-register": "^6.4.3",
-    "bootstrap": "^3.3.6",
     "compression": "^1.6.2",
     "console-polyfill": "^0.2.3",
     "es5-shim": "^4.5.9",
@@ -36,6 +35,7 @@
     "express": "^4.13.3",
     "forever": "^0.15.2",
     "form-data": "^2.1.1",
+    "immutability-helper": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonfile": "^2.4.0",
     "normalize.css": "^5.0.0",
@@ -60,7 +60,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.3.13",
+    "bootstrap-sass": "^3.3.7",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
