--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "stop": "npm run clean",
     "server": "npm run build && npm run start-server",
     "watch": "npm run dev",
-    "server:production": "npm run build:production && NODE_ENV=production forever start --uid 'tesco-todo' -a server/index.js",
+    "server:production": " npm run build:production && NODE_ENV=production forever start --uid 'tesco-todo' -a server/index.js",
     "dev": "rm -rf dist && forever stopall && webpack-dev-server --progress --config './webpack.config.dev-server.js'",
     "start-server": "nodemon server/index.js",
     "build": "npm run clean && webpack",
@@ -28,8 +28,11 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-register": "^6.4.3",
+    "body": "^5.1.0",
     "compression": "^1.6.2",
     "console-polyfill": "^0.2.3",
+    "core-js": "^2.4.1",
+    "es3ify-loader": "^0.2.0",
     "es5-shim": "^4.5.9",
     "es6-promise": "^3.2.1",
     "express": "^4.13.3",
@@ -57,7 +60,11 @@
   "devDependencies": {
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-modules-literals": "0.0.3",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es3": "^1.0.1",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-2": "^6.18.0",
@@ -65,6 +72,9 @@
     "bootstrap-sass": "^3.3.7",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.23.1",
+    "es3ify-webpack-plugin": "0.0.1",
+    "event-source-polyfill": "0.0.7",
+    "express-logging": "^1.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
@@ -80,6 +90,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.16.4",
+    "logops": "^1.0.7",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "postcss-loader": "^0.9.1",
